<?xml version="1.0"?>
<package format="2">
  <name>reynard_the_robot_ros</name>
  <version>0.1.0</version>
  <description>The reynard_the_robot_ros package</description>

  <maintainer email="wason@wasontech.com">John Wason</maintainer>

  <license>Apache-2.0</license>

  <url type="website">https://github.com/johnwason/reynard_the_robot_ros</url>

  <author email="wason@wasontech.com">John Wason</author>
 
  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>geometry_msgs</build_depend>
  <build_depend>reynard_the_robot_ros_msgs</build_depend>
  <build_depend>std_msgs</build_depend>
  <build_depend>rospy</build_depend>
  <build_export_depend>geometry_msgs</build_export_depend>
  <build_export_depend>reynard_the_robot_ros_msgs</build_export_depend>
  <build_export_depend>std_msgs</build_export_depend>
  <build_export_depend>rospy</build_export_depend>
  <exec_depend>geometry_msgs</exec_depend>
  <exec_depend>reynard_the_robot_ros_msgs</exec_depend>
  <exec_depend>std_msgs</exec_depend>
  <exec_depend>rospy</exec_depend>

  <export>

  </export>
</package>
