<?xml version="1.0"?>
<package format="2">
  <name>reynard_the_robot_ros_msgs</name>
  <version>0.1.0</version>
  <description>The reynard_the_robot_ros_msgs package</description>

  <maintainer email="wason@wasontech.com">John Wason</maintainer>

  <license>Apache-2.0</license>

  <url type="website">https://github.com/johnwason/reynard_the_robot_ros</url>

  <author email="wason@wasontech.com">John Wason</author>

  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>geometry_msgs</build_depend>
  <build_depend>std_msgs</build_depend>
  <build_depend>message_generation</build_depend>
  <build_export_depend>geometry_msgs</build_export_depend>
  <build_export_depend>std_msgs</build_export_depend>
  <build_export_depend>message_generation</build_export_depend>
  <exec_depend>geometry_msgs</exec_depend>
  <exec_depend>std_msgs</exec_depend>
  <exec_depend>message_runtime</exec_depend>
  
  <export>
    <architecture_independent/>
  </export>
</package>
